<resources>
    <string name="app_name">ANIME SHOW</string>

    <string name="welcome">Bienvenido</string>
    <string name="second_welcome">Anime series y más!</string>

    <string name="iniciar_sesion">Iniciar Sesión</string>
    <string name="registrarte">Registrarse</string>
    <string name="error_anime_short">Error al cargar anime</string>
    <string name="error_anime_long">Error al cargar anime, reinicia ANIME SHOW</string>
    <string name="no_login">Entrar sin registrarte</string>


    <string name="volviste">Volviste!</string>
    <string name="correo_electronico">Correo electronico</string>
    <string name="contrasena">Contraseña</string>
    <string name="olvidaste_tu">Olvidaste tu contraseña?</string>
    <string name="recuperala">Recuperala</string>
    <string name="o">O</string>
    <string name="unete_discord">Unete a nuestro servidor!</string>
    <string name="desc_discord">Explora esta pequeña comunidad, realiza tus solicitudes de animes faltantes, y mas!.</string>

    <string name="unete">Unete!</string>
    <string name="repetir_c">Repetir contraseña</string>

    <string name="ya_casi">Ya casi esta listo!</string>
    <string name="nombre_de">Nombre de usuario</string>
    <string name="fecha_nac">Confirmo ser mayor de 16 años</string>
    <string name="terminar_registro">Terminar registro</string>
    <string name="volver">Volver</string>

    <string name="recuperar">Recuperar</string>
    <string name="enviar_solicitud">Enviar solicitud</string>

    <string name="cual_es_tu_anime_fav">Cual es tu anime favorito?</string>
    <string name="cual_es_tu_gen_fav">Generos favoritos?</string>
    <string name="guardar">Guardar</string>
    <string name="omitir">Omitir</string>
    <string name="genero">Genero 1</string>
    <string name="title_activity_center">CenterActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_inicio">Inicio</string>
    <string name="menu_explora">Explora</string>
    <string name="menu_top">Top</string>
    <string name="menu_fav">Favoritos</string>
    <string name="menu_perfil">Perfil</string>
    <string name="menu_comunidad">Comunidad</string>
    <string name="menu_config">Configuracion</string>
    <string name="menu_acerca">Acerca de</string>
    <string name="username">Nombre de usuario</string>

    <string name="season_anime">Invierno 2021</string>
    <string name="continuar">Continuar viendo</string>
    <string name="recomendaciones">Recomendaciones</string>
    <string name="nombre_de_anime">Nombre de anime</string>
    <string name="mejor_coincidencia">Mejor coincidencia</string>
    <string name="mas_resultados">Mas resultados</string>
    <string name="sypnosis">Sypnosis: Every day, Naoto Hachiouji is teased relentlessly by Hayase Nagatoro, a first year student he meets one day in the library while working on his manga.After reading his story and seeing his awkward de…</string>
    <string name="en_emision">En emision</string>
    <string name="fecha_estreno">Fecha de estreno: 12/05/2021</string>
    <string name="serie_tv">Serie TV</string>
    <string name="estrellas">10.00</string>
    <string name="descripcion">Descripción: Lorem ismdsod sadsad asdasdfdf dcsdcdsddsad sadasdasd asdasdasd dsadasdasdasf sdfsdfdsc dsffdsf dsfsdfsa</string>
    <string name="cambiar_img">Cambiar imagen</string>
    <string name="modo_oscuro">Modo oscuro</string>
    <string name="notificiaciones">Notificaciones</string>
    <string name="enviar_recomendacion">Enviar recomendacion</string>
    <string name="cerrar_sesion">Cerrar sesion</string>
    <string name="finalizar">Finalizado</string>
    <string name="veinte_veinte">(2020)</string>
    <string name="generouno_gen">Genero 1, Genero 2, Genero 3, Genero 4</string>

    <string name="politica_de_p">Politica de privacidad</string>
    <string name="desc_politica"><b><i>Información que es recogida </i></b><br> Nuestra app podrá recoger información personal por ejemplo: Nombre de usuario e  información de contacto como  su dirección de correo electrónica.</br>

       <br><b><i> Uso de la información recogida</i></b> </br><br> Nuestra app emplea la información con el fin de proporcionar una mejora en la experiencia.
PROGMASTERPC está altamente comprometido para cumplir con el compromiso de mantener su información segura.
    </br>
    </string>

    <string name="full_descripcion">Sypnosis: Every day, Naoto Hachiouji is teased relentlessly by Hayase Nagatoro, a first year student he meets one day in the library while working on his manga. After reading his story and seeing his awkward demeanor,
        she decides from that momento on to toy with him, even calling him \"Senpai\" in lieu of using his real name. At first, Nagatoro\'s relentless anticsare more bothersome than anything and leave him feeling embarrassed, as
        he is forced to cater to her whims. However, as they spend more time together, a strange sort of friendship develops between them, and Naoto finds that life with Nagatoro can even be fun. But one thing\'s for sure: his
        days will never be dull again.</string>

    <string name="todos">Todos</string>
    <string name="serie">Series</string>
    <string name="peliculas">Peliculas</string>
    <string name="ovas">Ovas</string>
    <string name="diez">10</string>
    <string name="animes">Animes</string>
    <string name="generos">Generos</string>
    <string name="reproductor">Reproductores</string>
    <string name="nombre_personaje">Nombre de personaje</string>
    <string name="nombre_actor">Nombre de actor</string>
    <string name="week_anime">Animes de la semana</string>
    <string name="carousel_button">Acceder</string>
    <string name="ingresa_tu_recomendacion">Ingresa tus recomendaciones :)</string>
    <string name="repregunta">¿Estas seguro que deseas establecer esta imagen como fondo de pantalla?</string>
    <string name="recomendacion_details">Escribe recomendaciones para mejorar tu experiencia usando nuestra app, como que podriamos agregar, errores por corregir, se agradece bastante tu apoyo :D! </string>
    <string name="send">Enviar</string>
    <string name="set_wallpaper">Establecer como fondo de pantalla</string>
    <string name="cancel">Mas tarde</string>
    <string name="ok">Aceptar</string>
    <string name="cancel_options">Cancelar</string>
    <string name="establecer">Si</string>
    <string name="no_mostrar">No volver a mostrar, puedes volver encontrar esta ventana en el apartado de configuracion.</string>
    <string name="message_update">¿Quieres tener mucho mas contenido de lo habitual?\n\n
    Pulsa SI para actualizar la app a la version mas reciente, y con acceso a generos como Harem, Yaoi, y muchos mas.</string>
    <string name="fab_update_text">Pulsa para actualizar</string>

    <string name="descripcion_tab">Descripcion</string>
    <string name="episodios">Episodios</string>
    <string name="personajes">Personajes</string>
    <string name="galeria">Galeria</string>
    <string name="comentarios">Comentarios</string>
    <string name="numero_likes">12345</string>
    <string name="escribe_un">Escribe un comentario…</string>
    <string name="cargando">Registrando nuevo usuario</string>
    <string name="cargando_e">Cargando episodios...</string>
    <string name="recover_cargando">Procesando solicitud</string>
    <string name="nodata">Busqueda no encontrada. O inicia una con las opciones de arriba.</string>
    <string name="nodata_p">No se encontraron datos.</string>
    <string name="nodata_g">No se encontraron imagenes.</string>
    <string name="nodata_e">No se encontraron episodios.</string>
    <string name="nodata_c">No se encontraron comentarios. Sé el primero en comentar</string>
    <string name="no_disponible">No disponible</string>
    <string name="cargar_mas">Cargar mas...</string>
    <string name="episodios_latino">Buscar episodio en latino</string>

    <string name="comentario">Comentario acerca de la serie que tal te parecio, recomendaciones a otrasseries, y todo lo que te alcance con 150 caracteres, mas nada porque si no me</string>

    <!--    Notas de actualizacion-->
    <string name="notes_update">Notas de actualizacion</string>
    <string name="notas">-Ahora puedes seleccionar las imagenes de galeria como fondo de pantalla para tu telefono \n
    -Se añadio un apartado de comentarios en cada anime, solo los usuarios registrados podran comentar.\n
    -Se optimizaron algunas funciones.\n
    -Se corrigieron errores y bugs.\n</string>

    <string-array name="letra">
        <item>Letra</item>
        <item>A</item>
        <item>B</item>
        <item>C</item>
        <item>D</item>
        <item>E</item>
        <item>F</item>
        <item>G</item>
        <item>H</item>
        <item>I</item>
        <item>J</item>
        <item>K</item>
        <item>L</item>
        <item>M</item>
        <item>N</item>
        <item>O</item>
        <item>P</item>
        <item>Q</item>
        <item>R</item>
        <item>S</item>
        <item>T</item>
        <item>U</item>
        <item>V</item>
        <item>W</item>
        <item>X</item>
        <item>Y</item>
        <item>Z</item>
    </string-array>
    <string-array name="categoria">
        <item>Categoria</item>
        <item>Mayores de 13 años</item>
        <item>Mayores de 17 años</item>
    </string-array>
    <string-array name="tipo">
        <item>Tipo</item>
        <item>TV</item>
        <item>OVA</item>
        <item>Movie</item>
    </string-array>
    <string-array name="rating">
        <item>Rating</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
    </string-array>
    <string-array name="genero">
        <item>Genero</item>
    </string-array>

    <string-array name="comentario_mas">
        <item>Comentarios recientes</item>
        <item>Comentarios mas relevante</item>
    </string-array>
    <!--TestAD-->
    <!--<string name="admob_id">ca-app-pub-3940256099942544~3347511713</string>
    <string name="admob_banner">ca-app-pub-3940256099942544/6300978111</string>
    <string name="admob_interstitial">ca-app-pub-3940256099942544/1033173712</string>
    <string name="admob_native">ca-app-pub-3940256099942544/2247696110</string>
-->
    <string name="admob_id">ca-app-pub-8207111865354553~9009787179</string>
    <string name="admob_banner">ca-app-pub-8207111865354553/8818215487</string>
    <string name="admob_interstitial">ca-app-pub-8207111865354553/2252807139</string>
    <string name="admob_native">ca-app-pub-8207111865354553/7884554527</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>