<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single" >
        <item
            android:id="@+id/nav_inicio"
            android:icon="@drawable/ic_inicio_icon"
            android:title="@string/menu_inicio" />
        <item
            android:id="@+id/nav_explora"
            android:icon="@drawable/ic_explorar_icon"
            android:title="@string/menu_explora" />
        <item
            android:id="@+id/nav_top"
            android:icon="@drawable/ic_top_icon"
            android:title="@string/menu_top" />
        <item
            android:id="@+id/nav_fav"
            android:icon="@drawable/ic_favorito_icon"
            android:title="@string/menu_fav" />
        <item
            android:id="@+id/nav_perfil"
            android:icon="@drawable/ic_perfil_icon"
            android:title="@string/menu_perfil" />
        <item
            android:id="@+id/nav_comunidad"
            android:icon="@drawable/ic_comunidad_icon"
            android:title="@string/menu_comunidad" />
        <item
            android:id="@+id/nav_configuracion"
            android:icon="@drawable/ic_configuracion_icon"
            android:title="@string/menu_config" />
        <item
            android:id="@+id/nav_acerca_de"
            android:icon="@drawable/ic_info_icon"
            android:title="@string/menu_acerca" />
    </group>
</menu>