<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_inicio">

    <fragment
        android:id="@+id/nav_inicio"
        android:name="com.jhonkkman.aniappinspiracy.ui.inicio.InicioFragment"
        android:label="@string/menu_inicio"
        tools:layout="@layout/fragment_inicio" />

    <fragment
        android:id="@+id/nav_explora"
        android:name="com.jhonkkman.aniappinspiracy.ui.explora.ExploraFragment"
        android:label="@string/menu_explora"
        tools:layout="@layout/fragment_explora" />

    <fragment
        android:id="@+id/nav_top"
        android:name="com.jhonkkman.aniappinspiracy.ui.top.TopFragment"
        android:label="@string/menu_top"
        tools:layout="@layout/fragment_top" />
    <fragment
        android:id="@+id/nav_fav"
        android:name="com.jhonkkman.aniappinspiracy.ui.favorito.FavoritoFragment"
        android:label="@string/menu_fav"
        tools:layout="@layout/fragment_favorito" />
    <fragment
        android:id="@+id/nav_perfil"
        android:name="com.jhonkkman.aniappinspiracy.ui.perfil.PerfilFragment"
        android:label="@string/menu_perfil"
        tools:layout="@layout/fragment_perfil" />
    <fragment
        android:id="@+id/nav_configuracion"
        android:name="com.jhonkkman.aniappinspiracy.ui.configuracion.ConfiguracionFragment"
        android:label="@string/menu_config"
        tools:layout="@layout/fragment_configuracion" />
    <fragment
        android:id="@+id/nav_acerca_de"
        android:name="com.jhonkkman.aniappinspiracy.ui.acerca.AcercaFragment"
        android:label="@string/menu_acerca"
        tools:layout="@layout/fragment_acerca" />
</navigation>