<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Register2Fragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="25dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ya_casi"
            android:textColor="@color/gray_text"
            android:textSize="30sp"
            android:textStyle="bold"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/nombre_de"
            android:background="@drawable/background_edittext"
            android:paddingLeft="25dp"
            android:textStyle="bold"
            android:inputType="text"
            android:layout_marginTop="25dp"
            android:textColor="@color/gray_text_hint"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/fecha_nac"
            android:background="@drawable/background_edittext"
            android:paddingLeft="25dp"
            android:textStyle="bold"
            android:inputType="number"
            android:layout_marginTop="20dp"
            android:textColor="@color/gray_text_hint"/>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center|top"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_register_register2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/registrarte"
                android:textColor="@color/white"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="10dp"
                android:textStyle="bold"
                android:textAllCaps="false"
                android:background="@drawable/background_button_red"/>

            <TextView
                android:id="@+id/tv_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/volver"
                android:textStyle="bold"
                android:textColor="@color/gray_text"/>

        </LinearLayout>

    </LinearLayout>

</FrameLayout>