<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginFragment">

    <!-- TODO: Update blank fragment layout -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="25dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/volviste"
            android:textColor="@color/gray_text"
            android:textSize="30sp"
            android:textStyle="bold"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/correo_electronico"
            android:background="@drawable/background_edittext"
            android:paddingLeft="25dp"
            android:inputType="textEmailAddress"
            android:textStyle="bold"
            android:layout_marginTop="25dp"
            android:textColor="@color/gray_text_hint"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/contrasena"
            android:background="@drawable/background_edittext"
            android:paddingLeft="25dp"
            android:textStyle="bold"
            android:inputType="textPassword"
            android:layout_marginTop="20dp"
            android:textColor="@color/gray_text_hint"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="10dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/olvidaste_tu"
                android:textStyle="bold"
                android:textSize="14sp"
                android:textColor="@color/gray_text_hint"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/recuperala"
                android:layout_marginLeft="5dp"
                android:textStyle="bold"
                android:textColor="@color/gray_text"
                android:textSize="14sp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center|bottom"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/iniciar_sesion"
                android:textColor="@color/white"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="10dp"
                android:textStyle="bold"
                android:textAllCaps="false"
                android:background="@drawable/background_button_red"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="0.2"
                    android:src="@drawable/line_horizontal"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/o"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:textStyle="bold"/>
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="0.2"
                    android:src="@drawable/line_horizontal"/>

            </LinearLayout>



            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_register_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/registrarte"
                android:textAllCaps="false"
                android:textStyle="bold"
                android:layout_marginTop="10dp"
                android:textColor="@color/dark_red"
                android:background="@drawable/background_button_white"/>

        </LinearLayout>

    </LinearLayout>

</FrameLayout>