<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.acerca.AcercaFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/politica_de_p"
            android:gravity="center"
            android:textStyle="bold"
            android:layout_margin="20dp"
            android:textSize="30sp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/desc_politica"
            android:layout_margin="20dp"
            android:textStyle="normal"
            android:textSize="20sp"/>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <com.google.android.gms.ads.AdView
                xmlns:ads="http://schemas.android.com/apk/res-auto"
                android:id="@+id/adView_acerca"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center|bottom"
                ads:adSize="BANNER"
                ads:adUnitId="@string/admob_banner">
            </com.google.android.gms.ads.AdView>
        </FrameLayout>
    </LinearLayout>

</RelativeLayout>